1.0.1-dev.1

- Fixed a bug that caused only a single file to be encrypted in earlier versions.

---

1.0.0-dev.3

- Added action
  - Delete files and directories after encryption
  - Delete encrypted files after decryption

---

1.0.0-dev.2

- GuiTools
  - Added one field only password field for decryption
- SecureTools
  - Overhaul encryption and decryption of files
    - Issues related to large file handling with previous implementation
  - Iteration value modified, increased

---

1.0.0-dev.1

- Added optional tools
  - genvault (Allows user to generate a vault with obfuscated name)
  - reveal (Allows user to view the name of the vault)

---

0.1.0-dev.2

- Added embedded file path
- Decryption automatically places file in embedded file path