@@ -17,30 +17,36 @@ public class FileOp{
     private static final String VAULT_MAIN = "VAULT";
     private static final int VAULT_ALIAS_NAME_LEN = 8;
     
-    public static char[] peekVault(Path pathDB, char[] password) throws Exception{
-        File fileDB = pathDB.toFile();
-        
-        if (!fileDB.exists()) {
-            throw new IOException(pathDB + " not found: ");
-        }
-        
-        byte[] encMeta = Files.readAllBytes(pathDB);
-        
-        byte[] details = SecureTools.decryptIO(encMeta, password);
-        
-        if (details.length % 2 != 0) {
-            throw new IOException("Invalid byte length for char conversion");
-        }
-        
-        char[] nameMeta = new char[details.length / 2];
-        
-        for (int i = 0; i < nameMeta.length; i++) {
-            nameMeta[i] = (char) (((details[i * 2] & 0xFF) << 8) | (details[i * 2 + 1] & 0xFF));
-        }
-        
-        SecureTools.eraseBytes(details);
-        
-        return nameMeta;
+    public static char[] peekVault(Path pathDB, char[] password) throws Exception{        
+        try{
+            File fileDB = pathDB.toFile();
+            
+            if (!fileDB.exists()) {
+                throw new IOException(pathDB + " not found: ");
+            }
+            
+            byte[] encMeta = Files.readAllBytes(pathDB);
+            
+            byte[] details = SecureTools.decryptIO(encMeta, password);
+            
+            if (details.length % 2 != 0) {
+                throw new IOException("Invalid byte length for char conversion");
+            }
+            
+            char[] nameMeta = new char[details.length / 2];
+            
+            for (int i = 0; i < nameMeta.length; i++) {
+                nameMeta[i] = (char) (((details[i * 2] & 0xFF) << 8) | (details[i * 2 + 1] & 0xFF));
+            }
+            
+            SecureTools.eraseBytes(details);
+            
+            return nameMeta;
+            
+        } catch (Exception e){
+            e.printStackTrace();
+            throw e;
+        }        
     }
     
     private static void storeAlias(String alias, char[] vaultName, char[] password) throws Exception{
